增加decoderonly和RNN等实现

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@
 checkpoints/
 *.zip
 *.rar
+*.csv
+*.pth
+*.txt
+*.json
+*.npy
 
-
-
+**/__pycache__/*
 
 
 # Byte-compiled / optimized / DLL files
